--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -68,3 +68,6 @@ content:
 - Currencies
 - The rainbow order
 - Currency comparision
+- Celsius to Fahrenheit
+- Difference between two doubles
+- Find X
